--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=todoManagment
-spring.datasource.url=jdbc:mysql://localhost:3306/product_catalog
+spring.datasource.url=jdbc:mysql://localhost:3306/PRODUCT_two
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
